agregando el link de git

--- a/index.html
+++ b/index.html
@@ -63,7 +63,11 @@
             <center>
             <button alaing="raight" type="submit">Enviar</button>
             <button alaing="left" type="reset">limpiar</button>
+             <button aling ="center" type="new">new</button>
             </center> 
+
+           <a href="https://git.com">ir a Git</a>
+           
         </form>
     </div>
 
