agregando link de google

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
             </center> 
 
            <a href="https://git.com">ir a Git</a>
+           <a href="https://google.com"> Ir a Google</a>
            
         </form>
     </div>
